<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">连接服务</string>
    <string name="wifi_setting_btn_cap">wifi设置</string>
    <string name="activity_title">助手连接设置</string>
    <string name="about_btn_cap">关于</string>
    <string name="txt_wifi_config">WIFI连接设置</string>
    <string name="txt_wifi_conn_perf">是否允许wifi连入</string>
    <string name="txt_wifi_pwd">连接密码设置</string>
    <string name="txt_wifi_conn_mgr">WIFI连接管理</string>
    <string name="txt_phone_ip">手机IP</string>
    <string name="txt_conn_count">已连接助手数量</string>
    <string name="txt_wifi_disconn">断开wifi连接</string>
    <string name="dlg_title_conn_pwd">请输入连接密码</string>
    <string name="btn_cap_sure">确定</string>
    <string name="btn_cap_cancel">取消</string>
    <string name="btn_cap_disconn">断开连接</string>
    <string name="txt_conn_mgr_dlg_title">当前连接的助手</string>
    <string name="btn_cap_back">返回</string>
    <string name="txt_about_title">关于</string>
    <string name="btn_help">帮助</string>
    <string name="wifi_cfg_ui_tip_info1">密码不能大于16个字符！</string>
    <string name="wifi_cfg_ui_tip_info2">密码加密失败！</string>
    <string name="wifi_cfg_ui_tip_info3">请先开启WIFI网络！</string>
    <string name="wifi_show_pwd">显示密码</string>
    <string name="failed_to_register_callback">注册到后台服务失败！</string>
    <string name="service_disable">后台服务不可用！</string>
    <string name="failed_to_remote_call">远程调用失败！</string>
    <string name="frame_title">连接设置将配合PC端的使用，可以帮助您在电脑上通过无线方式管理手机。</string>
    <string name="wifi_connect">无线连接</string>
    <string name="wifiConnection">WiFi连接</string>
    <string name="deviceInformation">设备信息</string>
    <string name="connectionSettings">连接设置 </string>
    <string name="set_wifi_on">启用该连接</string>
    <string name="conn_info">点击上面按钮启用连接到电脑</string>
    <string name="conn_settings">助手无线连接设置</string>
    <string name="connect_by_verify">请在电脑上运行PC版，选择Wi-Fi无线连接并输入以下验证码</string>
    <string name="wifi_connect_verify">请在PC端中输入下面的验证码：</string>
    <string name="wifi_connect_alert">检测到有电脑尝试通过WiFi连接到当前设备，是否允许？</string>
    <string name="wifi_connect_client">客户端： </string>
    <string name="wifi_connect_prompt">设备连入提示</string>
    <string name="wifi_connect_allow">允许连接</string>
    <string name="wifi_connect_not_allow">不允许</string>
    <string name="set_wifi_off">断开wifi连接</string>
    <string name="wifi_unable">未连接Wi-Fi</string>
	<string name="wifi_not_open">未启用</string>    
    <string name="set_wifi_enable">配置无线连接</string>
    <string name="notify_title">连接服务</string>
    <string name="notify_text">Wi-Fi连接中</string>
    <string name="shortcut_to_launcher">添加快捷方式到主屏幕</string>
    <string name="other_wifi">其他</string>
    <string name="notification_show">在通知栏显示</string>
    <string name="security_wifi">安全</string>
    <string name="connect_confirm">连接确认</string>
    <string name="one_key_clean">一键清理</string>
    <string name="device_name">设备名称: </string>
    <string name="device_type">设备类型: </string>
    <string name="device_cpu">处理器: </string>
    <string name="device_running_memory">运行内存: </string>
    <string name="device_internal_storage">内部存储: </string>
    <string name="device_sdcard">SD卡空间: </string>
    <string name="device_battery">电池: </string>
    <string name="IMEI">IMEI: </string>
    <string name="IMSI">IMSI: </string>
    <string name="not_get">未获取</string>
    <string name="storage_info">可用%1$s, 总计%2$s</string>
    <string name="not_root">您的手机未root，无法执行该操作</string>
	<string name="memory_clear_finish">清理完成，释放 %1$s 内存空间！</string>
    <string name="inc">Power Inc.</string>
    <string name="short_cut_name">WiFi连接</string>
    
    
    <string name="scan_info">扫描PC端的二维码\n即可通过WiFi连接您的手机到电脑</string>
    <string name="qcode_success">已成功连接到电脑</string>
    <string name="qcode_info">将二维码对准在矩阵框内\n即可自动扫描连接</string>
    <string name="qcode">"验证码：                "</string>
    <string name="qcode_1">验证码：</string>
    <string name="scan">立即扫描</string>
    <string name="qcode_title">二维码扫描</string>
    <string name ="wifi_connected">WiFi连接模式</string>
    <string name ="wifi_open">点此开启</string>
    <string name ="wifi_errorinfo">扫描失败!(错误码00%1$s)您可以：\n1,点击【重试】再次尝试；\n2若仍无法连接,建议您改用"验证码"连接.</string>
    <string name ="tab_wifi">WIFI连接</string>
    <string name ="tab_control">遥控器</string>
    <string name ="close_pc">关机</string>
</resources>