<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:baselineAligned="false"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/llayoutTitle"
        android:layout_width="fill_parent"
        android:layout_height="42dip"
        android:background="@drawable/title_bg" >

        <Button
            android:id="@+id/buttonBack"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="5dip"
            android:layout_marginLeft="20dip"
            android:layout_marginTop="5dip"
            android:background="@drawable/backbtn"
            android:gravity="center"
            android:text="@string/btn_cap_back"
            android:textColor="#BABABA"
            android:textSize="14dip" />

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_centerInParent="true"
            android:background="@null"
            android:gravity="center"
            android:text="@string/notify_title"
            android:textColor="#FFFFFF"
            android:textSize="16dip" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1" >

        <WebView
            android:id="@+id/webViewHelp"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_bg"
        android:visibility="gone"
        android:gravity="center" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inc"
            android:textColor="#FFFFFF"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>