<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <SurfaceView
        android:id="@+id/preview_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

    <com.nd.assistance.qcode.ViewfinderView
        android:id="@+id/viewfinder_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

    <com.nd.assistance.qcode.ShowQrCodeView
        android:id="@+id/zxing_showqr"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

   <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:textColor="#FFFFFF"
        android:text="@string/qcode_info"
        android:singleLine="false"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dip"
        android:layout_marginLeft="30dip"
        android:layout_marginRight="30dip"
        android:textSize="20sp"
        android:gravity="center"
       />

    
    <!-- 标题 -->

    <RelativeLayout
        android:id="@+id/zxing_title"
        android:layout_width="fill_parent"
        android:layout_height="42dip"
        android:background="@drawable/title_bg" >

        <Button
            android:id="@+id/zxing_back"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dip"
            android:layout_marginTop="5dip"
            android:layout_marginBottom="5dip"
            android:background="@drawable/backbtn"
            android:gravity="center"
            android:text="@string/btn_cap_back"
            android:textColor="#BABABA"
            android:textSize="14dip" 
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_centerInParent="true"
            android:background="@null"
            android:gravity="center"
            android:text="@string/qcode_title"
            android:textColor="#FFFFFF"
            android:textSize="16dip" />

    </RelativeLayout>

</RelativeLayout>