<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bigbg"
    android:baselineAligned="false" >

    <RelativeLayout
        android:id="@+id/main_title"
        android:layout_width="fill_parent"
        android:layout_height="42dip"
        android:background="@drawable/title_bg" >

        <ImageButton
            android:id="@+id/buttonBack"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dip"
            android:background="@null"
            android:gravity="center"
            android:src="@drawable/backiconbtn"
            android:visibility="visible" />

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_centerInParent="true"
            android:background="@null"
            android:gravity="center"
            android:text="@string/notify_title"
            android:textColor="#FFFFFF"
            android:textSize="16dip" />

        <ImageButton
            android:id="@+id/buttonHelp"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dip"
            android:background="@null"
            android:gravity="center"
            android:src="@drawable/helpbtn"
            android:visibility="gone" />
    </RelativeLayout>

    <!-- 切换条 -->

    <LinearLayout
        android:id="@+id/main_tab"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_title"
        android:visibility="gone" >

        <TextView
            android:id="@+id/main_tab_wifi"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/second_title_bg_select"
            android:gravity="center"
            android:text="@string/tab_wifi"
            android:textColor="#ffd800" />

        <TextView
            android:id="@+id/main_tab_control"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/second_title_bg"
            android:gravity="center"
            android:text="@string/tab_control"
            android:textColor="#969696" />
    </LinearLayout>

    <!-- 遥控器界面 -->

    <RelativeLayout
        android:id="@+id/control_tool"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dip"
        android:visibility="gone" >

        <ImageView
            android:id="@+id/control_rock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dip"
            android:src="@drawable/control_rock" />

        <ImageButton
            android:id="@+id/control_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dip"
            android:background="@drawable/closebg"
            android:src="@drawable/closebtn" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/control_content"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/control_tool"
        android:layout_below="@id/main_tab"
        android:visibility="gone" >

        <com.nd.assistance.ui.RemoterView
            android:id="@+id/control_remoteer"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

    <!-- WIFI界面 -->

    <RelativeLayout
        android:id="@+id/main_tool"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bottom_bg" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginBottom="25dip"
            android:layout_marginTop="25dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginRight="5dip"
                android:gravity="center"
                android:text="@string/notification_show"
                android:textColor="#ffffff"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/main_notifychange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dip"
                android:gravity="center"
                android:src="@drawable/notify_on" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/main_content"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/main_tool"
        android:layout_below="@id/main_tab"
        android:background="@drawable/bigbg"
        >
    <RelativeLayout
        
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true" >

        <ImageView
            android:id="@+id/content_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginRight="15dip"
            android:layout_marginTop="20dip"
            android:src="@drawable/connect_img" />

        <TextView
            android:id="@+id/content_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/content_img"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dip"
            android:gravity="center"
            android:text="@string/scan_info"
            android:textColor="#ffffffff"
            android:textSize="18sp" />

        <RelativeLayout
            android:id="@+id/content_scan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/content_txt"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dip"
            android:background="@drawable/scan_normal" >

            <TextView
                android:id="@+id/content_conttect_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/btn_cap_disconn"
                android:textColor="#ffffffff"
                android:textSize="21sp"
                android:visibility="invisible" />

            <LinearLayout
                android:id="@+id/contecnt_scan_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/camera_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dip"
                    android:text="@string/scan"
                    android:textColor="#ffffffff"
                    android:textSize="21sp" />
            </LinearLayout>
        </RelativeLayout>

        <TextView
            android:id="@+id/content_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/content_scan"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dip"
            android:text="@string/qcode"
            android:textColor="#999999"
            android:textSize="18sp" />
    </RelativeLayout>
</RelativeLayout>
</RelativeLayout>